worked on signup form

--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,5 @@
 body {
     min-height: 100vh;
     width: 100vw;
-    background-color: #222229;
+    background: linear-gradient(137deg, rgba(91, 55, 58, 1) 10%, rgba(34, 34, 41, 1) 24%);
 }
