--- a/src/components/inputField/style.css
+++ b/src/components/inputField/style.css
@@ -12,11 +12,12 @@
     height: 60px;
     width: 400px;
     border-radius: 4px;
-    border: 2px solid #FF6F89;
     font-family: DM Sans;
     font-size: 20px;
     font-family: 'DM Sans', sans-serif;
     line-height: 26px;
+    border: 0;
+    outline: 0;
 }
 
 .input-class:active,
