--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@ body {
     width: 100vw;
     background: linear-gradient(137deg, rgba(91, 55, 58, 1) 10%, rgba(34, 34, 41, 1) 24%);
 }
+
+@media (max-width:768px) {
+    body {
+        background: rgba(34, 34, 41, 1);
+    }
+}
