--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .container {
-    max-width: 100vh;
+    max-width: 100vw;
+    width: 100vw;
     display: grid;
     grid-template-columns: 20vw 60vw 20vw;
     grid-template-rows: 20vh auto;
@@ -20,12 +21,17 @@ section {
 
 .input-section {
     color: #fff;
-    display: flex;
+    display: grid;
+    place-items: center;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     font-family: 'DM Sans', sans-serif;
     font-size: 30px;
     font-weight: 500;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
 }
 
 .input-heading {
@@ -36,7 +42,7 @@ section {
 
 .input-paragraph {
     font-size: 1rem;
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -48,4 +54,41 @@ section {
 
 span {
     color: #FF6F89;
+}
+
+.center {
+    margin-top: 1rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.center * {
+    margin: 1rem 0;
+}
+
+.center p {
+    font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+    .container {
+        grid-template-rows: 10vh auto;
+        grid-template-columns: 10vw 80vw 10vw;
+    }
+    .input-heading {
+        font-size: 1.3rem;
+        font-weight: 500;
+        line-height: 38px;
+    }
+    .input-paragraph {
+        font-size: .8rem;
+        font-family: "Poppins", sans-serif;
+        line-height: 30px;
+    }
+    .input-section {
+        font-size: 30px;
+    }
 }
