--- a/src/components/inputField/style.css
+++ b/src/components/inputField/style.css
@@ -1,6 +1,6 @@
 .label-class {
     color: white;
-    font-size: 20px;
+    font-size: 1rem;
     line-height: 26px;
     font-family: 'DM Sans', sans-serif;
     margin-bottom: .5rem;
@@ -9,8 +9,8 @@
 .input-class {
     color: #8A9097;
     background-color: #35353A;
-    height: 60px;
-    width: 400px;
+    height: 55px;
+    width: 380px;
     border-radius: 4px;
     font-family: DM Sans;
     font-size: 20px;
@@ -18,6 +18,14 @@
     line-height: 26px;
     border: 0;
     outline: 0;
+    padding: 0 .5rem;
+    transition: all 0.2s ease-in-out;
+}
+
+.input-class::placeholder {
+    color: #8A9097;
+    font-size: 1rem;
+    padding: 0 .5rem;
 }
 
 .input-class:active,
@@ -36,4 +44,21 @@
     position: absolute;
     right: 4%;
     top: 30%;
+    left: 85%;
+}
+
+@media (max-width: 768px) {
+    .label-class {
+        font-size: 1rem;
+        line-height: 16px;
+    }
+    .input-class {
+        color: #8A9097;
+        background-color: #35353A;
+        height: 3.5rem;
+        width: 100%;
+        border-radius: 4px;
+        font-family: DM Sans;
+        font-size: 10px;
+    }
 }
