--- a/src/components/firsthand/style.css
+++ b/src/components/firsthand/style.css
@@ -7,6 +7,8 @@ div .img-1 {
     width: 100%;
 }
 
-div .img-1 {
-    opacity: 0;
+@media (max-width: 767px) {
+    div .img-1 {
+        opacity: 0;
+    }
 }
