--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     min-height: 100vh;
     width: 100vw;
     background: linear-gradient(137deg, rgba(91, 55, 58, 1) 10%, rgba(34, 34, 41, 1) 24%);
+    overflow-x: hidden;
 }
 
 @media (max-width:768px) {
