--- a/src/components/button/style.css
+++ b/src/components/button/style.css
@@ -6,7 +6,10 @@
         height: 55px;
         padding: 1rem;
         border: 0;
+        margin-top: 2rem;
+        font-size: 15px;
     }
+
     
     .btn-outline {
         color: #fff;
@@ -28,4 +31,15 @@
     
     .icon {
         width: 25px;
+    }
+
+    @media(max-width: 768px){
+         .btn-primary {
+            background-color: #FF6F89;
+            color: #000;
+            border-radius: 3px;
+            width: 150px;
+            height: auto;
+            font-size: 15px;
+        }
     }
