--- a/src/App.css
+++ b/src/App.css
@@ -1,109 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins:wght@100;200;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins:wght@100;200;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins:wght@100&display=swap");
 
 .container {
-    max-width: 100vw;
-    width: 100vw;
-    display: grid;
-    grid-template-columns: 20vw 60vw 20vw;
-    grid-template-rows: 20vh auto;
-    grid-template-areas: "hand . ." ". form hand2";
+  max-width: 100vw;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 20vw 60vw 20vw;
+  grid-template-rows: 20vh auto;
+  grid-template-areas: "hand . ." ". form hand2";
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .item-center {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 section {
-    grid-area: form;
+  grid-area: form;
 }
 
 .div-1 {
-    grid-area: hand;
+  grid-area: hand;
 }
 
 .div-2 {
-    grid-area: hand2;
+  grid-area: hand2;
 }
 
 .input-section {
-    color: #fff;
-    display: grid;
-    place-items: center;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 500;
-    justify-content: center;
-    justify-items: center;
-    align-content: center;
-    margin-top: 2rem;        
+  color: #fff;
+  display: grid;
+  place-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 500;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  margin-top: 2rem;
 }
 
 .input-heading {
-    font-size: 50px;
-    font-weight: 600;
-    line-height: 78px;
-    letter-spacing: 0.03em;
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 78px;
+  letter-spacing: 0.03em;
 }
 
 .input-paragraph {
-    font-size: 1rem;
-    font-family: "Poppins", sans-serif;
-    font-size: 22px;
-    font-weight: 200;
-    line-height: 40px;
-    letter-spacing: 0.03em;
-    text-align: center;
-    color: #8A9097;
-    margin-bottom: 3rem;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  font-size: 22px;
+  font-weight: 200;
+  line-height: 40px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #8a9097;
+  margin-bottom: 3rem;
 }
 
 span {
-    color: #FF6F89;
+  color: #ff6f89;
 }
 
 .center {
-    margin-top: 1rem;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  margin-top: 1rem;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .center * {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .center p {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 @media (max-width: 768px) {
-    .container {
-        grid-template-rows: 10vh auto;
-        grid-template-columns: 10vw 80vw 10vw;
-    }
-    .input-heading {
-        font-size: 1.3rem;
-        font-weight: 500;
-        line-height: 38px;
-    }
-    .input-paragraph {
-        font-size: .8rem;
-        font-family: "Poppins", sans-serif;
-        line-height: 30px;
-    }
-    .input-section {
-        font-size: 30px;
-    }
+  .container {
+    grid-template-rows: 10vh auto;
+    grid-template-columns: 10vw 80vw 10vw;
+  }
+  .input-heading {
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 38px;
+  }
+  .input-paragraph {
+    font-size: 0.8rem;
+    font-family: "Poppins", sans-serif;
+    line-height: 30px;
+  }
+  .input-section {
+    font-size: 30px;
+  }
 }
 /* reset_password */
 
