--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,6 @@ body {
 
 @media (max-width:768px) {
     body {
-        background: rgba(34, 34, 41, 1);
+        background: rgb(34, 34, 37);
     }
 }
